<resources>
    <string name="backup_list_adapter_local_contacts">Local contacts</string>
    <string name="preview_text_string_fragment_open_rich_text_editor_error_message">Failed to open text editor</string>
    <string name="bottom_navigation_menu_files_label">All files</string>
    <string name="bottom_navigation_menu_favorites_label">Favorites</string>
    <string name="bottom_navigation_menu_assistant_label">Assistant</string>
    <string name="bottom_navigation_menu_media_label">Media</string>
    <string name="file_list_error_headline">Poor connection</string>
    <string name="file_list_error_description">Check your internet connection or try again later</string>
    <string name="file_list_out_of_memory_description">Could not load content</string>
    <string name="about_android">%1$s Android app</string>
    <string name="about_version">version %1$s</string>
    <string name="about_version_with_build">version %1$s, build #%2$s</string>
    <string name="appbar_search_in">Search in %s</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="drawer_item_album">Albums</string>
    <string name="add_media">Add media</string>
    <string name="create_album_dialog_title">New album</string>
    <string name="rename_album_dialog_title">Rename album</string>
    <string name="create_album_dialog_message">Enter your new album name</string>
    <string name="album_name_empty">Album name cannot be empty</string>
    <string name="album_rename">Rename album</string>
    <string name="album_share">Share album</string>
    <string name="rename_dialog_button">Rename</string>
    <string name="album_delete">Delete album</string>
    <string name="album_delete_failed_message">Failed to delete few of the files.</string>
    <plurals name="album_items_text">
        <item quantity="one">%1$d item — %2$s</item>
        <item quantity="other">%1$d items — %2$s</item>
    </plurals>
    <plurals name="album_elements_text">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="album_already_exists">Album already exists</string>
    <string name="album_picker_toolbar_title">Pick album</string>
    <string name="media_picker_toolbar_title">Pick media files</string>
    <string name="empty_albums_title">Create albums for your photos</string>
    <string name="empty_albums_message">You can organize all your photos in as many albums as you like. You haven\'t created an album yet.</string>
    <string name="add_to_album">Add to album</string>
    <string name="album_file_added_message">File added successfully</string>
    <string name="album_unsupported_file">Unsupported media</string>
    <string name="album_upload_from_account">Select images from account</string>
    <string name="album_rename_conflict">This name is already in use.</string>
    <string name="album_copy_file_conflict">Already exists.</string>
    <string name="menu_item_sort_by_name_a_z">A - Z</string>
    <string name="menu_item_sort_by_name_z_a">Z - A</string>
    <string name="menu_item_sort_by_date_newest_first">Newest first</string>
    <string name="menu_item_sort_by_date_oldest_first">Oldest first</string>
    <string name="menu_item_sort_by_size_biggest_first">Biggest first</string>
    <string name="menu_item_sort_by_size_smallest_first">Smallest first</string>
    <string name="oc_file_list_adapter_offline_operation_description_text">Pending operation</string>
    <string name="ecosystem_apps_display_assistant">Assistant</string>
    <string name="unexpected_error_occurred">Unexpected error occurred</string>
    <string name="app_config_disable_multiaccount_title">Disable Multi Account</string>
    <string name="app_config_disable_sharing_title">Disable Sharing</string>
    <string name="app_config_disable_clipboard_title">Disable Clipboard</string>
    <string name="app_config_disable_more_external_site_title">Disable External Sites</string>
    <string name="app_config_disable_intro_title">Disable Intro</string>
    <string name="app_config_disable_log_title">Disable Log</string>
    <string name="app_config_base_url_title">Base URL</string>
    <string name="app_config_proxy_host_title">Proxy Hostname</string>
    <string name="app_config_proxy_port_title">Proxy Port</string>
    <string name="app_config_enforce_protection_title">Enforce Protection</string>
    <string name="offline_operations_file_does_not_exists_yet">File does not exist yet. Please upload the file first.</string>
    <string name="offline_operations_worker_notification_remove_conflict_text">Cancelled deletion of %s. The file has been modified on the server.</string>
    <string name="offline_operations_worker_notification_rename_conflict_text">Cancelled rename of %s. A file with the same name exists on the server.</string>
    <string name="offline_operations_worker_notification_create_file_conflict_text">Could not create %s. A file with the same name exists on the server.</string>
    <string name="offline_operations_worker_notification_create_folder_conflict_text">Could not create %s. A folder with the same name exists on the server.</string>
    <string name="offline_operations_worker_notification_start_text">Starting offline operations</string>
    <string name="offline_operations_worker_notification_error_text">The offline operation cannot be completed. %s</string>
    <string name="offline_operations_worker_notification_manager_ticker">Offline Operations</string>
    <string name="offline_operations_worker_progress_text" translatable="false">%1$d / %2$d - %3$s</string>
    <string name="drawer_item_assistant">Assistant</string>
    <string name="drawer_item_all_files">All files</string>
    <string name="drawer_item_personal_files">Personal files</string>
    <string name="drawer_item_favorites">Favorites</string>
    <string name="drawer_item_on_device">On device</string>
    <string name="drawer_item_shared">Shared</string>
    <string name="drawer_item_uploads_list">Uploads</string>
    <string name="drawer_item_activities">Activities</string>
    <string name="drawer_item_notifications">Notifications</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_more">More</string>
    <string name="prefs_lock">App passcode</string>
    <string name="prefs_lock_title">Protect app using</string>
    <string name="prefs_show_hidden_files">Show hidden files</string>
    <string name="prefs_show_ecosystem_apps">Show app switcher</string>
    <string name="prefs_show_ecosystem_apps_summary">Nextcloud app suggestions in navigation heading</string>
    <string name="prefs_enable_media_scan_notifications">Show media scan notifications</string>
    <string name="prefs_enable_media_scan_notifications_summary">Notify about newly found media folders</string>
    <string name="prefs_calendar_contacts">Sync calendar and contacts</string>
    <string name="prefs_calendar_contacts_summary">Set up DAVx⁵ (formerly known as DAVdroid) (v1.3.0+) for current account</string>
    <string name="prefs_daily_backup_summary">Daily backup of your calendar and contacts</string>
    <string name="prefs_sycned_folders_summary">Manage folders for auto upload</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_recommend">Recommend to a friend</string>
    <string name="prefs_imprint">Imprint</string>
    <string name="prefs_theme_title">Theme</string>
    <string name="about_title">About</string>
    <string name="placeholder_filename" translatable="false">Filename</string>
    <string name="placeholder_file_type" translatable="false">Filetype</string>
    <string name="placeholder_download" translatable="false">Download</string>
    <string name="placeholder_random_account" translatable="false">firstname@example.nextcloud.com</string>
    <string name="placeholder_uuid" translatable="false">d7edb387-0b61-4e4e-a728-ffab3055d700</string>
    <string name="placeholder_job_state" translatable="false">ENQUEUED</string>
    <string name="placeholder_progress" translatable="false">50%</string>
    <string name="placeholder_file_path" translatable="false">/abc/example</string>
    <string name="auto_upload_on_wifi">Only upload on unmetered Wi-Fi</string>
    <string name="logs_title">Logs</string>
    <string name="logs_menu_refresh">Refresh</string>
    <string name="logs_menu_send">Send logs by email</string>
    <string name="logs_menu_delete">Delete logs</string>
    <string name="prefs_category_details">Details</string>
    <string name="drawer_synced_folders">Auto upload</string>
    <string name="drawer_community">Community</string>
    <string name="upload_file_dialog_filename">Filename</string>
    <string name="upload_file_dialog_filetype">Filetype</string>
    <string name="prefs_category_about">About</string>
    <string name="backup_title">Contacts and calendar backup</string>
    <string name="drawer_logout">Log out</string>
    <string name="privacy">Privacy</string>
    <string name="synced_folders_configure_folders">Configure folders</string>
    <string name="prefs_sourcecode">Get source code</string>
    <string name="prefs_license">License</string>
    <string name="prefs_category_dev">Dev</string>
    <string name="hint_name">Name</string>
    <string name="drawer_item_trashbin">Deleted files</string>
    <string name="etm_title">Engineering test mode</string>
    <string name="etm_background_jobs_cancel_all">Cancel all jobs</string>
    <string name="etm_background_jobs_prune">Prune inactive jobs</string>
    <string name="etm_background_jobs_start_test_job">Start test job</string>
    <string name="etm_background_jobs_schedule_test_job">Schedule test job</string>
    <string name="etm_background_jobs_stop_test_job">Stop test job</string>
    <string name="etm_transfer_remote_path">Remote path</string>
    <string name="etm_transfer_type">Transfer</string>
    <string name="etm_transfer_uuid" translatable="false">@string/etm_background_job_uuid</string>
    <string name="etm_transfer_user" translatable="false">@string/etm_background_job_user</string>
    <string name="etm_transfer_state" translatable="false">@string/etm_background_job_state</string>
    <string name="etm_transfer_progress" translatable="false">@string/etm_background_job_progress</string>
    <string name="logs_menu_search">Search logs</string>
    <string name="download_latest_dev_version">Download latest dev version</string>
    <string name="changelog_dev_version">Changelog dev version</string>
    <string name="drawer_item_gallery">Media</string>
    <string name="displays_mnemonic">Displays your 12 word passphrase</string>
    <string name="prefs_setup_e2e">Set up end-to-end encryption</string>
    <string name="prefs_e2e_active">End-to-end encryption is set up!</string>
    <string name="prefs_remove_e2e">Remove encryption locally</string>
    <string name="remove_e2e">You can remove end-to-end encryption locally on this client</string>
    <string name="setup_e2e">During setup of end-to-end encryption, you will receive a random 12 word mnemonic, which you will need to open your files on other devices. This will only be stored on this device, and can be shown again in this screen. Please note it down in a secure place!</string>
    <string name="prefs_keys_exist">Add end-to-end encryption to this client</string>
    <string name="drawer_item_groupfolders">Team folders</string>
    <string name="prefs_category_sync">Sync</string>
    <string name="internal_two_way_sync">Internal two way sync</string>
    <string name="prefs_two_way_sync_summary">Manage internal folders for two way sync</string>
</resources>