<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Nextcloud - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2020 Chris Narkiewicz <hello@ezaquarii.com>
  ~ SPDX-License-Identifier: AGPL-3.0-or-later OR GPL-2.0-only
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">

    <item
        android:id="@+id/etm_background_jobs_cancel"
        android:title="@string/etm_background_jobs_cancel_all"
        app:showAsAction="never"
        android:showAsAction="never" />

    <item
        android:id="@+id/etm_background_jobs_prune"
        android:title="@string/etm_background_jobs_prune"
        app:showAsAction="never"
        android:showAsAction="never" />


    <item
        android:id="@+id/etm_background_jobs_start_test"
        android:title="@string/etm_background_jobs_start_test_job"
        app:showAsAction="never"
        android:showAsAction="never" />

    <item
        android:id="@+id/etm_background_jobs_schedule_test"
        android:title="@string/etm_background_jobs_schedule_test_job"
        app:showAsAction="never"
        android:showAsAction="never" />

    <item
        android:id="@+id/etm_background_jobs_cancel_test"
        android:title="@string/etm_background_jobs_stop_test_job"
        app:showAsAction="never"
        android:showAsAction="never" />

</menu>
