<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Nextcloud - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2020 Chris Narkiewicz <hello@ezaquarii.com>
  ~ SPDX-License-Identifier: AGPL-3.0-or-later OR GPL-2.0-only
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/etm_transfer_type" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/etm_transfer_type_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:src="@drawable/ic_cloud_download"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/etm_transfer_type"
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_marginStart="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etm_transfer_type_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/placeholder_download" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/etm_transfer_uuid" />

        <TextView
            android:id="@+id/etm_transfer_uuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/placeholder_uuid" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/etm_transfer_remote_path" />

        <TextView
            android:id="@+id/etm_transfer_remote_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/placeholder_file_path" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/etm_transfer_user" />

        <TextView
            android:id="@+id/etm_transfer_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/placeholder_random_account" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/etm_transfer_state" />

        <TextView
            android:id="@+id/etm_transfer_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/placeholder_job_state" />

    </TableRow>

    <TableRow
        android:id="@+id/etm_transfer_progress_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/etm_transfer_progress" />

        <TextView
            android:id="@+id/etm_transfer_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/placeholder_progress" />

    </TableRow>

</TableLayout>
