<!--
  ~ Nextcloud - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2019 Chris Narkiewicz <hello@ezaquarii.com>
  ~ SPDX-License-Identifier: AGPL-3.0-or-later OR GPL-2.0-only
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="0"
        android:title="@string/logs_menu_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_refresh_logs"
        android:title="@string/logs_menu_refresh"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_refresh"/>

    <item
        android:id="@+id/action_send_logs"
        android:title="@string/logs_menu_send"
        app:showAsAction="never"
        android:orderInCategory="200"
        android:icon="@drawable/ic_send"/>

    <item
        android:id="@+id/action_delete_logs"
        android:title="@string/logs_menu_delete"
        app:showAsAction="never"
        android:orderInCategory="300"
        android:icon="@drawable/ic_delete"/>
</menu>
