<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Nextcloud - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2026 Nextcloud GmbH and Nextcloud contributors
  ~ SPDX-License-Identifier: AGPL-3.0-or-later
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/action_rename_album"
        android:orderInCategory="1"
        android:title="@string/album_rename"
        app:showAsAction="never" />

    <item
        android:id="@id/action_share_album"
        android:orderInCategory="2"
        android:title="@string/album_share"
        app:showAsAction="never" />

    <item
        android:id="@id/action_delete_album"
        android:orderInCategory="3"
        android:title="@string/album_delete"
        app:showAsAction="never" />

</menu>
